Add functionality to download today's and tomorrow's electricity prices